View Issue Details [ Jump to Notes ] [ Print ]
IDProjectCategoryView StatusDate SubmittedLast Update
0011437CMakeCMakepublic2010-11-10 10:022016-06-10 14:31
ReporterThomas Schuetzle 
Assigned ToBill Hoffman 
PrioritynormalSeverityminorReproducibilityalways
StatusclosedResolutionmoved 
Platformia32 + x64OSWindowsOS Version7
Product VersionCMake 2.8.3 
Target VersionFixed in Version 
Summary0011437: Visual project generation for Intel Fortran targets: XML syntax error and missing source control variables
DescriptionWhen generating Visual projects for Intel Fortran targets I have encountered two issues:

1) The created project file has a broken XML syntax:
<VisualStudioProject
        ProjectCreator="Intel Fortran"
        Version="9.10"
        ProjectType="typeStaticLibrary"
        Keyword="Static Library">
        ProjectGUID="{D523CF7A-5968-4ED1-98E1-0F0DBA9C2260}">
...
This does not cause Visual to have problems with the project. It seems to discard the ProjectGUID attribute and to generate a new one automatically. However I do not know I this has sideeffects.

2) We are using the variables VS_SCC_LOCALPATH, VS_SCC_PROJECTNAME, VS_SCC_PROVIDER for creating project files with the source control (Perforce) enabled. This works nicely for Visual C++ projects. However the created projects for Intel Fortran are missing this attributes. The syntax is exactly the same as for Visual C++ projects. It finally should look like this (at least for our case):
<VisualStudioProject
         ProjectType="typeStaticLibrary"
         ProjectCreator="Intel Fortran"
         Keyword="Static Library"
         Version="9.10"
         ProjectIdGuid="{D523CF7A-5968-4ED1-98E1-0F0DBA9C2260}"
         SccProjectName="Perforce Project"
         SccLocalPath="..\..\.."
         SccProvider="MSSCCI:Perforce SCM">
Additional InformationI temporarily solved the problems by running a Python script after the project generation that fixes the according Project files. However this currently causes Problems if cmake is invoked again from within Visual (e.g. on CMakeList.txt changes).

One final question: Is it possible to specify some kind of "pre-generation" hook to get the python script to run automatically by cmake after the project generation ? This way I would have a fully functional workaround solution as long as the source control properties are not applied. I a first try I could write a wrapper script around the cmake call to realize it, but if there is a CMake internal method it would of cause be preferable.
TagsNo tags attached.
Attached Files

 Relationships

  Notes
(0041762)
Kitware Robot (administrator)
2016-06-10 14:28

Resolving issue as `moved`.

This issue tracker is no longer used. Further discussion of this issue may take place in the current CMake Issues page linked in the banner at the top of this page.

 Issue History
Date Modified Username Field Change
2010-11-10 10:02 Thomas Schuetzle New Issue
2011-01-17 16:40 David Cole Assigned To => Bill Hoffman
2011-01-17 16:40 David Cole Status new => assigned
2016-06-10 14:28 Kitware Robot Note Added: 0041762
2016-06-10 14:28 Kitware Robot Status assigned => resolved
2016-06-10 14:28 Kitware Robot Resolution open => moved
2016-06-10 14:31 Kitware Robot Status resolved => closed


Copyright © 2000 - 2018 MantisBT Team